# CO-NO2-Kombisensor-Mod-Kalibrator

./: .gitignore  Cargo.toml  README.md  install.sh  update.sh
examples/: byteorder_crate.rs  cancel_threads.rs  multithreading.rs  widget_on_heap.rs
src/: calib_error.rs  commands.rs  configuration.rs  gas.rs  lib.rs  main.rs
src/co_no2_kombisensor/: mod.rs
src/co_no2_kombisensor/kombisensor/: mod.rs
src/co_no2_kombisensor/sensor/: mod.rs
src/gui/gtk3/: calibrator_view.rs  interface.glade  mod.rs  static_resource.rs  view_calibrator.rs  view_liveview.rs  view_messpunkt.rs  view_show_values.rs
src/resources/: main.ui  resources.gresource  resources.xml
