[package]
name = "kalibrator"
version = "0.2.1"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Kalibrator Software für die CO/NO2 Kombisensoren mit Modbus Interface"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/Kliemann-Service-GmbH/CO-NO2-Kombisensor-Mod-Kalibrator.git"
license = "GPL-2.0"
build = "build.rs"

[dependencies]
byteorder = "*"
gdk = { version = "0.5.0" }
gio = "^0"
glib = "*"
glib-sys = "*"
gobject-sys = "*"
gtk = { version = "0.1.0", features = ["v3_16"] }
gtk-sys = "*"
libc = "*"
libmodbus-rs = { git = "https://github.com/zzeroo/libmodbus-rs.git" }
xmz_server = { git = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Server.git" }
