[package]
name = "kalibrator"
version = "0.2.1"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Kalibrator Software für die CO/NO2 Kombisensoren mit Modbus Interface"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/Kliemann-Service-GmbH/CO-NO2-Kombisensor-Mod-Kalibrator.git"
license = "GPL-2.0"
build = "build.rs"

[dependencies]
byteorder = "*"
libc = "*"
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_16"] }
glib = { git = "https://github.com/gtk-rs/glib.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gtk-sys = { git = "https://github.com/gtk-rs/sys.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
libmodbus-rs = { git = "https://github.com/zzeroo/libmodbus-rs.git" }
